fixed css not wrapping

--- a/reviews/static/Agro/main.css
+++ b/reviews/static/Agro/main.css
@@ -30,7 +30,7 @@ ul {
 
 .content-section {
   background: #ffffff;
-  padding: 10px 20px;
+  padding: 0px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
   margin-bottom: 20px;
